--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=SalonManagementDb;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=SalonManagementDb;Username=postgres"
   },
 
   "AllowedHosts": "*"
